
PROJECT(Orz)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0 FATAL_ERROR)

IF( COMMAND CMAKE_POLICY )
	CMAKE_POLICY( SET CMP0003 NEW )
ENDIF( COMMAND CMAKE_POLICY )


SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)


OPTION( BUILD_OrzSDK "Set to ON to build the Orz application." ON )
OPTION( BUILD_OrzAsio "Set to ON to build the OrzAsio application." OFF )
OPTION( BUILD_OrzCORBA "Set to ON to build the OrzCORBA SDK." OFF )


LIST(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)


	
INCLUDE(CPack)
INCLUDE(OrzCmakeModule)
FIND_PACKAGE(OrzDependenciesLibrary)
FIND_PACKAGE(OrzDependenciesInclude)
FIND_PACKAGE(OrzDependenciesBin)

IF( BUILD_OrzSDK )
	FIND_PACKAGE(OrzDependenciesMedia)
ENDIF(BUILD_OrzSDK )


IF(UNIX)
	LINK_DIRECTORIES(${Orz_DependenciesLibrary} /lib /usr/lib /usr/local/lib)
	INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR} ${Orz_DependenciesInclude} /usr/include /usr/local/include)
ELSE()
	LINK_DIRECTORIES(${Orz_DependenciesLibrary})
	INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR} ${Orz_DependenciesInclude} )
ENDIF()



INSTALL(DIRECTORY ${Orz_DependenciesLibrary} DESTINATION ./dependencies/ PATTERN "CVS" EXCLUDE PATTERN ".svn" EXCLUDE)
INSTALL(DIRECTORY ${Orz_DependenciesInclude} DESTINATION ./dependencies/ PATTERN "CVS" EXCLUDE PATTERN ".svn" EXCLUDE)
INSTALL(DIRECTORY orz DESTINATION include PATTERN "CVS" EXCLUDE PATTERN ".svn" EXCLUDE)
INSTALL(DIRECTORY ${Orz_DependenciesBin} DESTINATION ./ PATTERN "CVS" EXCLUDE PATTERN ".svn" EXCLUDE)



IF( BUILD_OrzSDK )
	INSTALL(DIRECTORY ${Orz_DependenciesMedia} DESTINATION ./ PATTERN "CVS" EXCLUDE PATTERN ".svn" EXCLUDE)
ENDIF(BUILD_OrzSDK )


IF( UNIX )
	SET(BOOST_LIB_POSTFIX -gcc41-mt-1_39 CACHE STRING "Set boost lib postfix. for example: boost_system${BOOST_LIB_POSTFIX} == boost_system-gcc41-mt-1_39 .")
ENDIF(UNIX)
	
IF( BUILD_OrzSDK )
	ADD_SUBDIRECTORY(Toolkit_Base)
	ADD_SUBDIRECTORY(Framework_Base)
	ADD_SUBDIRECTORY(View_OGRE3D)
	ADD_SUBDIRECTORY(View_Fmod)
	ADD_SUBDIRECTORY(View_OIS)
	ADD_SUBDIRECTORY(Controller_Base)
	ADD_SUBDIRECTORY(Controller_Win32)
	ADD_SUBDIRECTORY(Model_Base)
	ADD_SUBDIRECTORY(UnitTest)

	ADD_DEPENDENCIES(Framework_Base Toolkit_Base)
	ADD_DEPENDENCIES(View_OGRE3D Framework_Base Toolkit_Base)
	ADD_DEPENDENCIES(View_Fmod Framework_Base Toolkit_Base)
	ADD_DEPENDENCIES(View_OIS Framework_Base Toolkit_Base)
	ADD_DEPENDENCIES(Model_Base View_Fmod View_OGRE3D View_OIS)
	ADD_DEPENDENCIES(Controller_Base Model_Base)
	ADD_DEPENDENCIES(Controller_Win32 Model_Base)
	ADD_DEPENDENCIES(UnitTest Model_Base)
ENDIF(BUILD_OrzSDK)

IF( BUILD_OrzAsio )
	ADD_SUBDIRECTORY(Toolkit_Plus)
	ADD_SUBDIRECTORY(OrzAsio)
	ADD_DEPENDENCIES(OrzAsio Toolkit_Plus)
ENDIF( BUILD_OrzAsio )

IF( BUILD_OrzCORBA )
	ADD_SUBDIRECTORY(OrzCORBA)
	ADD_SUBDIRECTORY(OrzCORBAVmNode)
	ADD_SUBDIRECTORY(OrzCORBAVmAdmin)
	ADD_SUBDIRECTORY(OrzCORBAVmRoot)
	ADD_DEPENDENCIES(OrzCORBAVmNode OrzCORBA)
	ADD_DEPENDENCIES(OrzCORBAVmAdmin OrzCORBA)
	ADD_DEPENDENCIES(OrzCORBAVmRoot OrzCORBA)
ENDIF(BUILD_OrzCORBA)


IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
	SET(CMAKE_INSTALL_PREFIX "${PROJECT_SOURCE_DIR}/build/${Compiler}/OrzSDK" CACHE PATH "OrsSDK install prefix" FORCE)
ENDIF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)




