
PROJECT(OrzMySQL)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0 FATAL_ERROR)

IF( COMMAND CMAKE_POLICY )
   CMAKE_POLICY( SET CMP0003 NEW )
ENDIF( COMMAND CMAKE_POLICY )


SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)


LIST(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../cmake)

INCLUDE(CPack)
INCLUDE(OrzCmakeModule)
FIND_PACKAGE(OrzDependencies)
FIND_PACKAGE(OrzBin)
FIND_PACKAGE(OrzAsio)



IF( UNIX )
	LINK_DIRECTORIES(${Orz_Dependencies_DIR}/lib ${Orz_Asio_DIR}/lib /lib /usr/lib /usr/local/lib /usr/lib/mysql)
	INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR} ${Orz_Dependencies_DIR}/include ${Orz_Asio_DIR}/include /usr/include /usr/local/include)
ELSE()
	LINK_DIRECTORIES(${Orz_Dependencies_DIR}/lib ${Orz_Asio_DIR}/lib)
	INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR} ${Orz_Dependencies_DIR}/include ${Orz_Asio_DIR}/include)
ENDIF()




IF( UNIX )
	SET(BOOST_LIB_POSTFIX CACHE STRING "Set boost lib postfix. for example: boost_system${BOOST_LIB_POSTFIX} == boost_system-gcc41-mt-1_39 .")
ENDIF(UNIX)

IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
  SET(CMAKE_INSTALL_PREFIX
    "${PROJECT_SOURCE_DIR}/../build/OrzSDK" CACHE PATH "OrzMySQL install prefix" FORCE
    )
ENDIF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)

ADD_SUBDIRECTORY(OrzMySQL)
ADD_SUBDIRECTORY(OrzMySQLTest)
