
PROJECT(OgrePackFileSystem)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0 FATAL_ERROR)

IF( COMMAND CMAKE_POLICY )
   CMAKE_POLICY( SET CMP0003 NEW )
ENDIF( COMMAND CMAKE_POLICY )


SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)


LIST(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../cmake)

INCLUDE(CPack)
INCLUDE(OrzCmakeModule)
FIND_PACKAGE(OrzSDK)




LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/dependencies/lib 
${Orz_SDK_DIR}/lib 
${Orz_SDK_DIR}/dependencies/lib)

INCLUDE_DIRECTORIES(
${PROJECT_SOURCE_DIR} 
${PROJECT_SOURCE_DIR}/ZipArchive
${Orz_SDK_DIR}/dependencies/include 
${Orz_SDK_DIR}/include
)


INSTALL(DIRECTORY ${Orz_SDK_DIR}/bin DESTINATION ./ PATTERN "CVS" EXCLUDE  PATTERN ".svn" EXCLUDE PATTERN ".exe" EXCLUDE)
INSTALL(DIRECTORY ${Orz_SDK_DIR}/media DESTINATION ./ PATTERN "CVS" EXCLUDE PATTERN ".svn" EXCLUDE)




ADD_SUBDIRECTORY(ZipArchive)
ADD_SUBDIRECTORY(PackFileSystem)
ADD_SUBDIRECTORY(UT_PackFileSystem)



ADD_DEPENDENCIES(Plugin_PackFileSystem ZipArchive)
ADD_DEPENDENCIES(UT_PackFileSystem Plugin_PackFileSystem ZipArchive)



IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
  SET(CMAKE_INSTALL_PREFIX
    "${PROJECT_SOURCE_DIR}/../build/OgrePackFileSystem" CACHE PATH "OgrePackFileSystem install prefix" FORCE
    )
ENDIF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)