CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0 FATAL_ERROR)

IF( COMMAND CMAKE_POLICY )
	CMAKE_POLICY( SET CMP0003 NEW )
ENDIF( COMMAND CMAKE_POLICY )


LIST(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../cmake)
INCLUDE(CPack)
INCLUDE(OrzCmakeModule)


ORZ_PRE_BUILD(OrzLua)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Lua51/include ${PROJECT_SOURCE_DIR})
INSTALL(DIRECTORY ${PROJECT_SOURCE_DIR}/orz DESTINATION ./include PATTERN "CVS" EXCLUDE PATTERN ".svn" EXCLUDE)



ADD_SUBDIRECTORY(Lua51)
ADD_SUBDIRECTORY(View_Lua)
ADD_SUBDIRECTORY(UT_Lua)

ADD_DEPENDENCIES(View_Lua Lua51)
ADD_DEPENDENCIES(UT_Lua View_Lua Lua51)


ORZ_POST_BUILD()


