CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0 FATAL_ERROR)

IF( COMMAND CMAKE_POLICY )
	CMAKE_POLICY( SET CMP0003 NEW )
ENDIF( COMMAND CMAKE_POLICY )



LIST(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../cmake)
INCLUDE(CPack)
INCLUDE(OrzCmakeModule)





ORZ_PRE_BUILD(OrzMd5Checker)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
INSTALL(DIRECTORY ${PROJECT_SOURCE_DIR}/orz DESTINATION ./include PATTERN "CVS" EXCLUDE PATTERN ".svn" EXCLUDE)




ADD_SUBDIRECTORY(Tookit_Md5Checker)
ADD_SUBDIRECTORY(UT_Md5Checker)

ADD_DEPENDENCIES(UT_Md5Checker Tookit_Md5Checker)


ORZ_POST_BUILD()



