CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0 FATAL_ERROR)

IF( COMMAND CMAKE_POLICY )
	CMAKE_POLICY( SET CMP0003 NEW )
ENDIF( COMMAND CMAKE_POLICY )



LIST(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../cmake)
INCLUDE(CPack)
INCLUDE(OrzCmakeModule)





ORZ_PRE_BUILD(OrzSingleChip)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/View_SingleChip/include)
INSTALL(DIRECTORY ${PROJECT_SOURCE_DIR}/orz DESTINATION ./include PATTERN "CVS" EXCLUDE PATTERN ".svn" EXCLUDE)





ADD_SUBDIRECTORY(View_SingleChip)
ADD_SUBDIRECTORY(UT_SingleChip)


ADD_DEPENDENCIES(UT_SingleChip View_SingleChip)


ORZ_POST_BUILD()



