CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0 FATAL_ERROR)

IF( COMMAND CMAKE_POLICY )
	CMAKE_POLICY( SET CMP0003 NEW )
ENDIF( COMMAND CMAKE_POLICY )



LIST(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../cmake)
INCLUDE(CPack)
INCLUDE(OrzCmakeModule)





ORZ_PRE_BUILD(OrzTrigger)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include )
INSTALL(DIRECTORY ${PROJECT_SOURCE_DIR}/include DESTINATION . PATTERN "CVS" EXCLUDE PATTERN ".svn" EXCLUDE)


ADD_SUBDIRECTORY(Toolkit_Trigger)
ADD_SUBDIRECTORY(UnitTest_Trigger)
ADD_SUBDIRECTORY(Demo_Trigger)

ADD_DEPENDENCIES(UnitTest_Trigger Toolkit_Trigger)
ADD_DEPENDENCIES(Demo_Trigger Toolkit_Trigger)


ORZ_POST_BUILD()



