CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0 FATAL_ERROR)

IF( COMMAND CMAKE_POLICY )
	CMAKE_POLICY( SET CMP0003 NEW )
ENDIF( COMMAND CMAKE_POLICY )



LIST(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../cmake)
INCLUDE(CPack)
INCLUDE(OrzCMakeModule)





ORZ_PRE_BUILD(MVC_Example)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/View)


ADD_SUBDIRECTORY(Model)
ADD_SUBDIRECTORY(View)
ADD_SUBDIRECTORY(Controller)
ADD_DEPENDENCIES(Controller View Model)
ORZ_POST_BUILD()



