CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0 FATAL_ERROR)

IF( COMMAND CMAKE_POLICY )
	CMAKE_POLICY( SET CMP0003 NEW )
ENDIF( COMMAND CMAKE_POLICY )



LIST(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../cmake)
INCLUDE(CPack)
INCLUDE(OrzCMakeModule)





ORZ_PRE_BUILD(Toolkits_Example)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/View_SingleChip/include)


ADD_SUBDIRECTORY(IDManager)
ADD_SUBDIRECTORY(Variant)
ADD_SUBDIRECTORY(EventSystem)
ADD_SUBDIRECTORY(OtherToolkits)
ADD_SUBDIRECTORY(TimerManager_Clock)
ADD_SUBDIRECTORY(FSMLogic)
ADD_SUBDIRECTORY(Plugin)
ADD_SUBDIRECTORY(DynLibManager)
ADD_DEPENDENCIES(DynLibManager Plugin)
ORZ_POST_BUILD()



