CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0 FATAL_ERROR)

IF( COMMAND CMAKE_POLICY )
	CMAKE_POLICY( SET CMP0003 NEW )
ENDIF( COMMAND CMAKE_POLICY )



LIST(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../cmake)
INCLUDE(CPack)
INCLUDE(OrzCmakeModule)




INSTALL(FILES ${PROJECT_SOURCE_DIR}/media/overlays/ShrewMouse.overlay DESTINATION ./media/overlays)


ORZ_PRE_BUILD(OgreShrewMouse)

INCLUDE_DIRECTORIES("include" ${Orz_SDK_DIR}/dependencies/include/Ogre)

ADD_SUBDIRECTORY(Day1)
ADD_SUBDIRECTORY(Day2)
ADD_SUBDIRECTORY(Day3)
ADD_SUBDIRECTORY(Day4)
ADD_SUBDIRECTORY(Day5)
ADD_SUBDIRECTORY(Day6)





ORZ_POST_BUILD()

