CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0 FATAL_ERROR)

IF( COMMAND CMAKE_POLICY )
	CMAKE_POLICY( SET CMP0003 NEW )
ENDIF( COMMAND CMAKE_POLICY )



LIST(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../cmake)
INCLUDE(CPack)
INCLUDE(OrzCmakeModule)




ORZ_PRE_BUILD(OrzSpaceInvaders)


INSTALL(DIRECTORY ${PROJECT_SOURCE_DIR}/media/sound DESTINATION ./media PATTERN "CVS" EXCLUDE  PATTERN ".svn" PERMISSIONS WORLD_READ)

ADD_SUBDIRECTORY(Day1)
ADD_SUBDIRECTORY(Day2)
ADD_SUBDIRECTORY(Day3)
ADD_SUBDIRECTORY(Day4)
ADD_SUBDIRECTORY(Day5)
ADD_SUBDIRECTORY(Day6)





ORZ_POST_BUILD()

