
ORZ_PRE_BUILD_EVENT(FCBase)

ADD_DEFINITIONS( -D${LIB_NAME_TOUPPER}_EXPORTS -D_USRDLL)
INCLUDE_DIRECTORIES("include")





ORZ_SET_PROJECT_FILES(include include/ .h)
ORZ_SET_PROJECT_FILES(src src/ .cpp)
   
ADD_LIBRARY(${LIB_NAME} SHARED ${${LIB_NAME}_FILE})

TARGET_LINK_LIBRARIES(${LIB_NAME} fmodex_vc Toolkit_Base Framework_Base)

ORZ_POST_BUILD_EVENT()